--- a/Design/views/login.ejs
+++ b/Design/views/login.ejs
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Login</title>
 </head>
+
 <body>
   <h1>User Login</h1>
+
   <form action="/authentication/login" method="post">
+    
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required>
-    
+
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required>
-    
+
     <button type="submit">Login</button>
   </form>
+
+  <p>Don't have an account? <a href="/authentication/register">Register here</a>.</p>
+  
 </body>
+
+<% if (locals.loginSuccess) { %>
+  <p>Login successful. Redirecting to home page...</p>
+  <script>
+    setTimeout(function () {window.location.href = "/home";}, 3000);
+  </script>
+<% } %>
+
 </html>
