--- a/Design/views/recipeDetails.ejs
+++ b/Design/views/recipeDetails.ejs
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recipe Details</title>
 </head>
+
 <body>
   <h1>Recipe Details</h1>
 
-  <h2><%= recipe.name %></h2>
-  <p><strong>Category:</strong> <%= recipe.category %></p>
-  <p><strong>Ingredients:</strong> <%= recipe.ingredients %></p>
-  <p><strong>Instructions:</strong> <%= recipe.instructions %></p>
+  <h2>
+    <%= recipe.name %>
+  </h2>
+  <p><strong>Category:</strong>
+    <%= recipe.category %>
+  </p>
+  <p><strong>Ingredients:</strong>
+    <%= recipe.ingredients %>
+  </p>
+  <p><strong>Instructions:</strong>
+    <%= recipe.instructions %>
+  </p>
 
 </body>
+
 </html>
