--- a/Design/views/home.ejs
+++ b/Design/views/home.ejs
@@ -4,19 +4,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/styles.css">
   <title>Home</title>
 </head>
 
-<nav>
-    <ul>
-      <li><a href="/home">Home</a></li>
-      <li><a href="/recipes">Recipes</a></li>
-      <li><a href="/inventory">Inventory</a></li>
-    </ul>
-</nav>
+<div class="container">
+  <div class="content">
+    <header class="header">
+      <a href="/home">Meal Master</a>
+    </header>
 
-<body>
-    <h1>Meal Master Home</h1>
-</body>
+    <body>
+      <h1 style="color: #58a86a">Welcome To Meal Master</h1>
+      <h2>Here at Meal Master, you can easily find meals that work for you!</h2>
+      <h1 style="color: #58a86a">How to Use</h1>
+      <h2>To get the most out of this app, head down below to the 'Inventory' tab. 
+        There, you can tell Meal Master what you have on hand at home. 
+        Once you have some items saved in your inventory,
+        you can go over to the 'Recipes' tab to view all recipes, 
+        and/or filter your search based on what you previously uploaded to your inventory.
+        Of course, if you just want to see some recipes for inspiration,
+        you can always just go straight to that page first!
+      </h2>
+      <p>Disclaimer: Recipe list is MUCH shorter than it would be in the finalized application.
+        This is simply a prototype list to show functionality for MVP purposes.
+      </p>
+    </body>
+  </div>
+  <div class="navbar">
+    <a href="/home">Home</a>
+    <a href="/recipes">Recipes</a>
+    <a href="/inventory">Inventory</a>
+  </div>
+</div>
+
+
 
 </html>
