--- a/Design/views/addInventoryForm.ejs
+++ b/Design/views/addInventoryForm.ejs
@@ -4,28 +4,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/styles.css">
   <title>Add Inventory Item</title>
 </head>
 
-<body>
-  <h1>Add Inventory Item</h1>
+<div class="container">
+  <div class="content">
+    <header class="header">
+      <a href="/home">Meal Master</a>
+    </header>
 
-  <form method="post" action="/inventory/add">
+    <body>
+      <h1>Add Inventory Item</h1>
 
-    <input type="hidden" name="userId" value="<%= userId %>">
+      <form class="form_options" method="post" action="/inventory/add">
 
-    <label for="ingredientName">Ingredient Name (lowercase):</label>
-    <input type="text" id="ingredientName" name="ingredient_name" required>
+        <input type="hidden" name="userId" value="<%= userId %>">
 
-    <label for="quantity">Quantity:</label>
-    <input type="number" id="quantity" name="quantity" required>
+        <label for="ingredientName">Ingredient Name (Lowercase):</label>
+        <input type="text" id="ingredientName" name="ingredient_name" required>
 
-    <label for="unit">Unit:</label>
-    <input type="text" id="unit" name="unit">
+        <label for="quantity">Quantity:</label>
+        <input type="number" id="quantity" name="quantity" required>
 
-    <button type="submit">Add Item</button>
-  </form>
+        <label for="unit">Unit (Optional):</label>
+        <input type="text" id="unit" name="unit">
 
-</body>
+        <button class="button" type="submit">Add Item</button>
+      </form>
+
+    </body>
+  </div>
+  <div class="navbar">
+    <a href="/home">Home</a>
+    <a href="/recipes">Recipes</a>
+    <a href="/inventory">Inventory</a>
+  </div>
+</div>
+
+
 
 </html>
