--- a/Design/views/editInventoryForm.ejs
+++ b/Design/views/editInventoryForm.ejs
@@ -1,35 +1,52 @@
+<!-- formatting for this file is weird, it wouldn't let me match it to the rest of the app -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
     <title>Edit Inventory Item</title>
 </head>
 
-<body>
-    <h1>Edit Inventory Item</h1>
+<div class="container">
+    <div class="content">
+        <header class="header">
+            <a href="/home">Meal Master</a>
+        </header>
 
-    <form method="post" action="/inventory/<%= itemId %>/edit">
+        <body>
+            <h1>Edit Inventory Item</h1>
 
-        <input type="hidden" name="_method" value="put">
+            <form class="form_options" method="post" action="/inventory/<%= itemId %>/edit">
 
-        <input type="hidden" name="userId" value="<%= userId %>">
+                <input type="hidden" name="_method" value="put">
 
-        <input type="hidden" name="itemId" value="<%= itemId %>">
+                <input type="hidden" name="userId" value="<%= userId %>">
 
-        <label for="ingredientName">Ingredient Name (lowercase): </label>
-        <input type="text" id="ingredientName" name="ingredient_name" value="<%= item.ingredient_name %>" required>
+                <input type="hidden" name="itemId" value="<%= itemId %>">
 
-        <label for="quantity">Quantity:</label>
-        <input type="number" id="quantity" name="quantity" value="<%= item.quantity %>" required>
+                <label for="ingredientName">Ingredient Name (Lowercase): </label>
+                <input type="text" id="ingredientName" name="ingredient_name" value="<%= item.ingredient_name %>" required>
 
-        <label for="unit">Unit:</label>
-        <input type="text" id="unit" name="unit" value="<%= item.unit %>">
+                <label for="quantity">Quantity:</label>
+                <input type="number" id="quantity" name="quantity" value="<%= item.quantity %>" required>
 
-        <button type="submit">Update Item</button>
+                <label for="unit">Unit (Optional):</label>
+                <input type="text" id="unit" name="unit" value="<%= item.unit %>">
 
-    </form>
-</body>
+                <button type="submit">Update Item</button>
+
+            </form>
+        </body>
+    </div>
+    <div class="navbar">
+        <a href="/home">Home</a>
+        <a href="/recipes">Recipes</a>
+        <a href="/inventory">Inventory</a>
+    </div>
+</div>
+
+
 
 </html>
