--- a/Design/views/recipeDetails.ejs
+++ b/Design/views/recipeDetails.ejs
@@ -4,25 +4,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/styles.css">
   <title>Recipe Details</title>
 </head>
 
-<body>
-  <h1>Recipe Details</h1>
+<div class="container">
+  <div class="content">
+    <header class="header">
+      <a href="/home">Meal Master</a>
+    </header>
 
-  <h2>
-    <%= recipe.name %>
-  </h2>
-  <p><strong>Category:</strong>
-    <%= recipe.category %>
-  </p>
-  <p><strong>Ingredients:</strong>
-    <%= recipe.ingredients %>
-  </p>
-  <p><strong>Instructions:</strong>
-    <%= recipe.instructions %>
-  </p>
+    <body>
+      <h1>Recipe Details</h1>
 
-</body>
+      <h2>
+        <%= recipe.name %>
+      </h2>
+      <p><strong>Category:</strong>
+        <%= recipe.category %>
+      </p>
+      <p><strong>Ingredients:</strong>
+        <%= recipe.ingredients %>
+      </p>
+      <p><strong>Instructions:</strong>
+        <%= recipe.instructions %>
+      </p>
+
+    </body>
+  </div>
+  <div class="navbar">
+    <a href="/home">Home</a>
+    <a href="/recipes">Recipes</a>
+    <a href="/inventory">Inventory</a>
+  </div>
+</div>
+
 
 </html>
